# stocks

./: CLAUDE.md  README.md  main.py  pyproject.toml
static/: index.html
