[project]
name = "stocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "yfinance>=0.2.28",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "ta>=0.10.2",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2"
]
